[gd_scene load_steps=16 format=3 uid="uid://dqjgpd5h2vx3q"]

[ext_resource type="Script" path="res://assets/scenes/scripts/arrow.gd" id="1_n1vi5"]
[ext_resource type="PackedScene" uid="uid://dw8en7ecjcevv" path="res://assets/scenes/blood2.tscn" id="2_a7e0k"]
[ext_resource type="AudioStream" uid="uid://72yq47c877nx" path="res://assets/sounds/bolt_smack.mp3" id="2_yc4vx"]
[ext_resource type="AudioStream" uid="uid://0rrthnhqay78" path="res://assets/sounds/bolt_flying.mp3" id="3_m4v7g"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5sian"]
resource_name = "metal"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.265722, 0.456218, 0.513274, 1)
metallic = 0.764896
roughness = 0.550901

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_on4ea"]
resource_name = "brown"
cull_mode = 2
vertex_color_use_as_albedo = true
albedo_color = Color(0.544248, 0.314715, 0.115592, 1)
roughness = 0.892971

[sub_resource type="ArrayMesh" id="ArrayMesh_8yi8y"]
_surfaces = [{
"aabb": AABB(38.5092, -3.12107, -2.70294, 7.98776, 6.24215, 5.40586),
"format": 34359742465,
"index_count": 54,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 2, 0, 0, 0, 3, 0, 1, 0, 5, 0, 4, 0, 5, 0, 1, 0, 2, 0, 4, 0, 7, 0, 6, 0, 7, 0, 4, 0, 5, 0, 6, 0, 9, 0, 8, 0, 9, 0, 6, 0, 7, 0, 8, 0, 11, 0, 10, 0, 11, 0, 8, 0, 9, 0, 10, 0, 3, 0, 0, 0, 3, 0, 10, 0, 11, 0, 3, 0, 12, 0, 2, 0, 2, 0, 12, 0, 5, 0, 5, 0, 12, 0, 7, 0, 7, 0, 12, 0, 9, 0, 9, 0, 12, 0, 11, 0, 11, 0, 12, 0, 3, 0),
"name": "metal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 13,
"vertex_data": PackedByteArray(97, 9, 26, 66, 134, 60, 230, 63, 175, 64, 81, 183, 97, 9, 26, 66, 196, 60, 102, 63, 99, 99, 199, 63, 75, 33, 31, 66, 249, 191, 199, 63, 161, 252, 44, 64, 75, 33, 31, 66, 217, 191, 71, 64, 154, 115, 91, 183, 97, 9, 26, 66, 210, 59, 102, 191, 99, 99, 199, 63, 75, 33, 31, 66, 124, 191, 199, 191, 162, 252, 44, 64, 97, 9, 26, 66, 15, 60, 230, 191, 45, 178, 76, 183, 75, 33, 31, 66, 156, 191, 71, 192, 114, 94, 82, 183, 97, 9, 26, 66, 211, 59, 102, 191, 49, 100, 199, 191, 75, 33, 31, 66, 124, 191, 199, 191, 12, 253, 44, 192, 97, 9, 26, 66, 187, 60, 102, 63, 50, 100, 199, 191, 75, 33, 31, 66, 242, 191, 199, 63, 13, 253, 44, 192, 216, 252, 57, 66, 145, 176, 6, 55, 109, 29, 82, 183)
}, {
"aabb": AABB(-5.86007e-07, -1.79871, -1.55775, 38.5092, 3.59744, 3.11548),
"format": 34359742465,
"index_count": 48,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 2, 0, 4, 0, 3, 0, 0, 0, 4, 0, 2, 0, 5, 0, 4, 0, 0, 0, 4, 0, 6, 0, 3, 0, 6, 0, 4, 0, 7, 0, 3, 0, 8, 0, 2, 0, 8, 0, 3, 0, 6, 0, 2, 0, 9, 0, 1, 0, 9, 0, 2, 0, 8, 0, 1, 0, 10, 0, 0, 0, 10, 0, 1, 0, 9, 0, 0, 0, 11, 0, 5, 0, 11, 0, 0, 0, 10, 0, 5, 0, 7, 0, 4, 0, 7, 0, 5, 0, 11, 0),
"name": "brown",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 12,
"vertex_data": PackedByteArray(0, 72, 157, 180, 74, 60, 102, 191, 201, 99, 199, 191, 47, 84, 157, 52, 74, 60, 230, 191, 112, 144, 117, 51, 24, 78, 29, 53, 73, 60, 102, 191, 202, 99, 199, 63, 0, 72, 157, 52, 76, 60, 102, 63, 201, 99, 199, 63, 49, 84, 157, 180, 74, 60, 230, 63, 74, 60, 102, 180, 24, 78, 29, 181, 68, 60, 102, 63, 203, 99, 199, 191, 97, 9, 26, 66, 196, 60, 102, 63, 99, 99, 199, 63, 97, 9, 26, 66, 134, 60, 230, 63, 175, 64, 81, 183, 97, 9, 26, 66, 210, 59, 102, 191, 99, 99, 199, 63, 97, 9, 26, 66, 15, 60, 230, 191, 45, 178, 76, 183, 97, 9, 26, 66, 211, 59, 102, 191, 49, 100, 199, 191, 97, 9, 26, 66, 187, 60, 102, 63, 50, 100, 199, 191)
}]
blend_shape_mode = 0

[sub_resource type="ArrayMesh" id="ArrayMesh_pp4yo"]
resource_name = "crossbow_Weapon_Arrow03_metal_0"
_surfaces = [{
"aabb": AABB(38.5092, -3.12107, -2.70294, 7.98776, 6.24215, 5.40586),
"attribute_data": PackedByteArray(0, 0, 64, 63, 0, 0, 128, 63, 171, 170, 106, 63, 0, 0, 128, 63, 171, 170, 106, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 171, 170, 106, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 106, 63, 0, 0, 128, 63, 171, 170, 106, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 1, 0, 128, 62, 0, 0, 128, 63, 1, 0, 128, 62, 0, 0, 128, 63, 1, 0, 128, 62, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 1, 0, 128, 62, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 1, 0, 128, 62, 0, 0, 128, 63, 1, 0, 128, 62, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 171, 170, 106, 63, 0, 0, 128, 63, 171, 170, 10, 63, 0, 0, 128, 63, 171, 170, 106, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 171, 170, 10, 63, 0, 0, 128, 63, 171, 170, 42, 63, 0, 0, 128, 63, 1, 0, 128, 62, 0, 0, 128, 63, 171, 170, 10, 63, 0, 0, 128, 63, 1, 0, 128, 62, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 171, 170, 10, 63, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 171, 170, 10, 63, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 171, 170, 10, 63, 0, 0, 128, 63),
"format": 34359742487,
"index_count": 54,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 2, 0, 4, 0, 3, 0, 5, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 11, 0, 13, 0, 12, 0, 14, 0, 16, 0, 15, 0, 17, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 23, 0, 25, 0, 24, 0, 26, 0, 28, 0, 27, 0, 29, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 35, 0, 37, 0, 36, 0, 38, 0, 40, 0, 39, 0, 41, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 47, 0, 49, 0, 48, 0, 50, 0, 52, 0, 51, 0),
"material": SubResource("StandardMaterial3D_5sian"),
"name": "metal",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 53,
"vertex_data": PackedByteArray(97, 9, 26, 66, 134, 60, 230, 63, 175, 64, 81, 183, 97, 9, 26, 66, 196, 60, 102, 63, 99, 99, 199, 63, 75, 33, 31, 66, 249, 191, 199, 63, 161, 252, 44, 64, 75, 33, 31, 66, 217, 191, 71, 64, 154, 115, 91, 183, 97, 9, 26, 66, 134, 60, 230, 63, 175, 64, 81, 183, 97, 9, 26, 66, 196, 60, 102, 63, 99, 99, 199, 63, 97, 9, 26, 66, 210, 59, 102, 191, 99, 99, 199, 63, 75, 33, 31, 66, 124, 191, 199, 191, 162, 252, 44, 64, 75, 33, 31, 66, 124, 191, 199, 191, 162, 252, 44, 64, 75, 33, 31, 66, 249, 191, 199, 63, 161, 252, 44, 64, 97, 9, 26, 66, 196, 60, 102, 63, 99, 99, 199, 63, 97, 9, 26, 66, 210, 59, 102, 191, 99, 99, 199, 63, 97, 9, 26, 66, 15, 60, 230, 191, 45, 178, 76, 183, 75, 33, 31, 66, 156, 191, 71, 192, 114, 94, 82, 183, 75, 33, 31, 66, 156, 191, 71, 192, 114, 94, 82, 183, 75, 33, 31, 66, 124, 191, 199, 191, 162, 252, 44, 64, 97, 9, 26, 66, 210, 59, 102, 191, 99, 99, 199, 63, 97, 9, 26, 66, 15, 60, 230, 191, 45, 178, 76, 183, 97, 9, 26, 66, 211, 59, 102, 191, 49, 100, 199, 191, 75, 33, 31, 66, 124, 191, 199, 191, 12, 253, 44, 192, 75, 33, 31, 66, 124, 191, 199, 191, 12, 253, 44, 192, 75, 33, 31, 66, 156, 191, 71, 192, 114, 94, 82, 183, 97, 9, 26, 66, 15, 60, 230, 191, 45, 178, 76, 183, 97, 9, 26, 66, 211, 59, 102, 191, 49, 100, 199, 191, 97, 9, 26, 66, 187, 60, 102, 63, 50, 100, 199, 191, 75, 33, 31, 66, 242, 191, 199, 63, 13, 253, 44, 192, 75, 33, 31, 66, 242, 191, 199, 63, 13, 253, 44, 192, 75, 33, 31, 66, 124, 191, 199, 191, 12, 253, 44, 192, 97, 9, 26, 66, 211, 59, 102, 191, 49, 100, 199, 191, 97, 9, 26, 66, 187, 60, 102, 63, 50, 100, 199, 191, 97, 9, 26, 66, 134, 60, 230, 63, 175, 64, 81, 183, 75, 33, 31, 66, 217, 191, 71, 64, 154, 115, 91, 183, 75, 33, 31, 66, 217, 191, 71, 64, 154, 115, 91, 183, 75, 33, 31, 66, 242, 191, 199, 63, 13, 253, 44, 192, 97, 9, 26, 66, 187, 60, 102, 63, 50, 100, 199, 191, 75, 33, 31, 66, 217, 191, 71, 64, 154, 115, 91, 183, 75, 33, 31, 66, 249, 191, 199, 63, 161, 252, 44, 64, 216, 252, 57, 66, 145, 176, 6, 55, 109, 29, 82, 183, 75, 33, 31, 66, 249, 191, 199, 63, 161, 252, 44, 64, 75, 33, 31, 66, 124, 191, 199, 191, 162, 252, 44, 64, 216, 252, 57, 66, 145, 176, 6, 55, 109, 29, 82, 183, 75, 33, 31, 66, 124, 191, 199, 191, 162, 252, 44, 64, 75, 33, 31, 66, 156, 191, 71, 192, 114, 94, 82, 183, 216, 252, 57, 66, 145, 176, 6, 55, 109, 29, 82, 183, 75, 33, 31, 66, 156, 191, 71, 192, 114, 94, 82, 183, 75, 33, 31, 66, 124, 191, 199, 191, 12, 253, 44, 192, 216, 252, 57, 66, 145, 176, 6, 55, 109, 29, 82, 183, 75, 33, 31, 66, 124, 191, 199, 191, 12, 253, 44, 192, 75, 33, 31, 66, 242, 191, 199, 63, 13, 253, 44, 192, 216, 252, 57, 66, 145, 176, 6, 55, 109, 29, 82, 183, 75, 33, 31, 66, 242, 191, 199, 63, 13, 253, 44, 192, 75, 33, 31, 66, 217, 191, 71, 64, 154, 115, 91, 183, 216, 252, 57, 66, 145, 176, 6, 55, 109, 29, 82, 183, 46, 77, 237, 176, 255, 255, 255, 63, 46, 77, 237, 176, 255, 255, 255, 63, 46, 77, 237, 176, 255, 255, 255, 63, 46, 77, 237, 176, 255, 255, 255, 63, 46, 77, 237, 176, 255, 255, 255, 63, 99, 67, 255, 127, 255, 255, 255, 63, 99, 67, 255, 127, 255, 255, 255, 63, 99, 67, 255, 127, 255, 255, 255, 63, 99, 67, 255, 127, 255, 255, 255, 63, 99, 67, 255, 127, 255, 255, 255, 63, 99, 67, 255, 127, 255, 255, 255, 63, 46, 77, 17, 79, 255, 255, 255, 63, 46, 77, 17, 79, 255, 255, 255, 63, 46, 77, 17, 79, 255, 255, 255, 63, 46, 77, 17, 79, 255, 255, 255, 63, 46, 77, 17, 79, 255, 255, 255, 63, 46, 77, 17, 79, 255, 255, 255, 63, 238, 48, 208, 50, 255, 255, 255, 191, 238, 48, 208, 50, 255, 255, 255, 191, 238, 48, 208, 50, 255, 255, 255, 191, 238, 48, 208, 50, 255, 255, 255, 191, 238, 48, 208, 50, 255, 255, 255, 191, 238, 48, 208, 50, 255, 255, 255, 191, 0, 0, 99, 195, 255, 255, 255, 191, 0, 0, 99, 195, 255, 255, 255, 191, 0, 0, 99, 195, 255, 255, 255, 191, 0, 0, 99, 195, 255, 255, 255, 191, 0, 0, 99, 195, 255, 255, 255, 191, 0, 0, 99, 195, 255, 255, 255, 191, 238, 48, 46, 205, 255, 255, 255, 191, 238, 48, 46, 205, 255, 255, 255, 191, 238, 48, 46, 205, 255, 255, 255, 191, 238, 48, 46, 205, 255, 255, 255, 191, 238, 48, 46, 205, 255, 255, 255, 191, 238, 48, 46, 205, 255, 255, 255, 191, 33, 157, 173, 190, 255, 255, 255, 63, 33, 157, 173, 190, 255, 255, 255, 63, 33, 157, 173, 190, 255, 255, 255, 63, 187, 164, 255, 127, 255, 255, 255, 63, 187, 164, 255, 127, 255, 255, 255, 63, 187, 164, 255, 127, 255, 255, 255, 63, 33, 157, 81, 65, 255, 255, 255, 63, 33, 157, 81, 65, 255, 255, 255, 63, 33, 157, 81, 65, 255, 255, 255, 63, 80, 193, 33, 29, 255, 255, 255, 191, 80, 193, 33, 29, 255, 255, 255, 191, 80, 193, 33, 29, 255, 255, 255, 191, 255, 255, 67, 219, 255, 255, 255, 191, 255, 255, 67, 219, 255, 255, 255, 191, 255, 255, 67, 219, 255, 255, 255, 191, 80, 193, 221, 226, 255, 255, 255, 191, 80, 193, 221, 226, 255, 255, 255, 191, 80, 193, 221, 226, 255, 255, 255, 191)
}, {
"aabb": AABB(-5.86007e-07, -1.79871, -1.55775, 38.5092, 3.59744, 3.11548),
"attribute_data": PackedByteArray(168, 170, 170, 61, 0, 0, 0, 0, 254, 255, 127, 62, 0, 0, 0, 0, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 42, 63, 0, 0, 0, 0, 171, 170, 106, 63, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 0, 0, 168, 170, 170, 61, 0, 0, 0, 0, 171, 170, 42, 63, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 0, 0, 170, 170, 170, 62, 0, 0, 0, 0, 168, 170, 170, 61, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 0, 0, 171, 170, 106, 63, 0, 0, 0, 0, 171, 170, 106, 63, 0, 0, 128, 63, 171, 170, 106, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 0, 0, 168, 170, 170, 189, 0, 0, 0, 0, 172, 170, 170, 61, 0, 0, 0, 0, 172, 170, 170, 61, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 168, 170, 170, 189, 0, 0, 128, 63, 168, 170, 170, 189, 0, 0, 0, 0, 172, 170, 170, 61, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 128, 63, 0, 0, 128, 62, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 128, 63, 172, 170, 170, 61, 0, 0, 0, 0, 0, 0, 128, 62, 0, 0, 0, 0, 86, 85, 213, 62, 0, 0, 0, 0, 86, 85, 213, 62, 0, 0, 128, 63, 86, 85, 213, 62, 0, 0, 128, 63, 0, 0, 128, 62, 0, 0, 128, 63, 0, 0, 128, 62, 0, 0, 0, 0, 86, 85, 213, 62, 0, 0, 0, 0, 85, 85, 21, 63, 0, 0, 0, 0, 85, 85, 21, 63, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 86, 85, 213, 62, 0, 0, 128, 63, 86, 85, 213, 62, 0, 0, 0, 0, 85, 85, 21, 63, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 0, 0, 0, 0, 64, 63, 0, 0, 128, 63, 0, 0, 64, 63, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 128, 63, 85, 85, 21, 63, 0, 0, 0, 0),
"format": 34359742487,
"index_count": 48,
"index_data": PackedByteArray(0, 0, 2, 0, 1, 0, 3, 0, 5, 0, 4, 0, 6, 0, 8, 0, 7, 0, 9, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 15, 0, 17, 0, 16, 0, 18, 0, 20, 0, 19, 0, 21, 0, 23, 0, 22, 0, 24, 0, 26, 0, 25, 0, 27, 0, 29, 0, 28, 0, 30, 0, 32, 0, 31, 0, 33, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 39, 0, 41, 0, 40, 0, 42, 0, 44, 0, 43, 0, 45, 0, 47, 0, 46, 0),
"material": SubResource("StandardMaterial3D_on4ea"),
"name": "brown",
"primitive": 3,
"uv_scale": Vector4(0, 0, 0, 0),
"vertex_count": 48,
"vertex_data": PackedByteArray(0, 72, 157, 180, 74, 60, 102, 191, 201, 99, 199, 191, 47, 84, 157, 52, 74, 60, 230, 191, 112, 144, 117, 51, 24, 78, 29, 53, 73, 60, 102, 191, 202, 99, 199, 63, 24, 78, 29, 53, 73, 60, 102, 191, 202, 99, 199, 63, 0, 72, 157, 52, 76, 60, 102, 63, 201, 99, 199, 63, 49, 84, 157, 180, 74, 60, 230, 63, 74, 60, 102, 180, 0, 72, 157, 180, 74, 60, 102, 191, 201, 99, 199, 191, 24, 78, 29, 53, 73, 60, 102, 191, 202, 99, 199, 63, 49, 84, 157, 180, 74, 60, 230, 63, 74, 60, 102, 180, 24, 78, 29, 181, 68, 60, 102, 63, 203, 99, 199, 191, 0, 72, 157, 180, 74, 60, 102, 191, 201, 99, 199, 191, 49, 84, 157, 180, 74, 60, 230, 63, 74, 60, 102, 180, 49, 84, 157, 180, 74, 60, 230, 63, 74, 60, 102, 180, 0, 72, 157, 52, 76, 60, 102, 63, 201, 99, 199, 63, 97, 9, 26, 66, 196, 60, 102, 63, 99, 99, 199, 63, 97, 9, 26, 66, 196, 60, 102, 63, 99, 99, 199, 63, 97, 9, 26, 66, 134, 60, 230, 63, 175, 64, 81, 183, 49, 84, 157, 180, 74, 60, 230, 63, 74, 60, 102, 180, 0, 72, 157, 52, 76, 60, 102, 63, 201, 99, 199, 63, 24, 78, 29, 53, 73, 60, 102, 191, 202, 99, 199, 63, 97, 9, 26, 66, 210, 59, 102, 191, 99, 99, 199, 63, 97, 9, 26, 66, 210, 59, 102, 191, 99, 99, 199, 63, 97, 9, 26, 66, 196, 60, 102, 63, 99, 99, 199, 63, 0, 72, 157, 52, 76, 60, 102, 63, 201, 99, 199, 63, 24, 78, 29, 53, 73, 60, 102, 191, 202, 99, 199, 63, 47, 84, 157, 52, 74, 60, 230, 191, 112, 144, 117, 51, 97, 9, 26, 66, 15, 60, 230, 191, 45, 178, 76, 183, 97, 9, 26, 66, 15, 60, 230, 191, 45, 178, 76, 183, 97, 9, 26, 66, 210, 59, 102, 191, 99, 99, 199, 63, 24, 78, 29, 53, 73, 60, 102, 191, 202, 99, 199, 63, 47, 84, 157, 52, 74, 60, 230, 191, 112, 144, 117, 51, 0, 72, 157, 180, 74, 60, 102, 191, 201, 99, 199, 191, 97, 9, 26, 66, 211, 59, 102, 191, 49, 100, 199, 191, 97, 9, 26, 66, 211, 59, 102, 191, 49, 100, 199, 191, 97, 9, 26, 66, 15, 60, 230, 191, 45, 178, 76, 183, 47, 84, 157, 52, 74, 60, 230, 191, 112, 144, 117, 51, 0, 72, 157, 180, 74, 60, 102, 191, 201, 99, 199, 191, 24, 78, 29, 181, 68, 60, 102, 63, 203, 99, 199, 191, 97, 9, 26, 66, 187, 60, 102, 63, 50, 100, 199, 191, 97, 9, 26, 66, 187, 60, 102, 63, 50, 100, 199, 191, 97, 9, 26, 66, 211, 59, 102, 191, 49, 100, 199, 191, 0, 72, 157, 180, 74, 60, 102, 191, 201, 99, 199, 191, 24, 78, 29, 181, 68, 60, 102, 63, 203, 99, 199, 191, 49, 84, 157, 180, 74, 60, 230, 63, 74, 60, 102, 180, 97, 9, 26, 66, 134, 60, 230, 63, 175, 64, 81, 183, 97, 9, 26, 66, 134, 60, 230, 63, 175, 64, 81, 183, 97, 9, 26, 66, 187, 60, 102, 63, 50, 100, 199, 191, 24, 78, 29, 181, 68, 60, 102, 63, 203, 99, 199, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 0, 0, 255, 127, 255, 255, 255, 191, 255, 127, 37, 209, 255, 127, 108, 87, 255, 127, 37, 209, 255, 127, 108, 87, 255, 127, 37, 209, 255, 127, 108, 87, 255, 127, 37, 209, 255, 127, 108, 87, 255, 127, 37, 209, 255, 127, 108, 87, 255, 127, 37, 209, 255, 127, 108, 87, 255, 127, 255, 127, 255, 127, 254, 127, 255, 127, 255, 127, 255, 127, 254, 127, 255, 127, 255, 127, 255, 127, 254, 127, 255, 127, 255, 127, 255, 127, 254, 127, 255, 127, 255, 127, 255, 127, 254, 127, 255, 127, 255, 127, 255, 127, 254, 127, 255, 127, 217, 46, 217, 46, 254, 127, 255, 127, 217, 46, 217, 46, 254, 127, 255, 127, 217, 46, 217, 46, 254, 127, 255, 127, 217, 46, 217, 46, 254, 127, 255, 127, 217, 46, 37, 209, 254, 127, 255, 127, 217, 46, 217, 46, 254, 127, 217, 174, 0, 0, 217, 46, 0, 0, 217, 174, 0, 0, 217, 46, 0, 0, 217, 174, 0, 0, 217, 46, 0, 0, 217, 174, 0, 0, 217, 46, 0, 0, 217, 174, 0, 0, 37, 209, 0, 0, 217, 174, 0, 0, 217, 46, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 255, 255, 255, 255, 255, 127, 0, 0, 217, 174, 255, 255, 255, 127, 146, 40, 217, 174, 255, 255, 255, 127, 146, 40, 217, 174, 255, 255, 255, 127, 146, 40, 217, 174, 255, 255, 255, 127, 146, 40, 217, 174, 255, 255, 255, 127, 146, 40, 217, 174, 255, 255, 255, 127, 146, 40)
}]
blend_shape_mode = 0
shadow_mesh = SubResource("ArrayMesh_8yi8y")

[sub_resource type="CylinderShape3D" id="CylinderShape3D_iagi5"]
height = 4.0
radius = 0.301425

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tw2v0"]
emission_shape = 1
emission_sphere_radius = 3.0
radial_velocity_min = 1.0
radial_velocity_max = 2.0
gravity = Vector3(0, -0.5, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1k3jk"]
albedo_color = Color(1, 1, 0, 1)
emission_enabled = true
emission = Color(0.690196, 0.690196, 0, 1)
emission_energy_multiplier = 3.79
billboard_mode = 2

[sub_resource type="QuadMesh" id="QuadMesh_yosx3"]
material = SubResource("StandardMaterial3D_1k3jk")
size = Vector2(0.05, 0.05)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_rak02"]
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector3(0, -0.5, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jcq5c"]
albedo_color = Color(0.352143, 0.360497, 0.367612, 1)
emission_enabled = true
emission = Color(0.352941, 0.360784, 0.368627, 1)
billboard_mode = 2

[sub_resource type="QuadMesh" id="QuadMesh_xe46a"]
material = SubResource("StandardMaterial3D_jcq5c")
size = Vector2(0.02, 0.02)

[node name="arrow" type="CharacterBody3D"]
transform = Transform3D(0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.000332445, -0.00076877, 0.00137603)
script = ExtResource("1_n1vi5")
blood_effect_scene = ExtResource("2_a7e0k")

[node name="arrow" type="MeshInstance3D" parent="."]
transform = Transform3D(0, -0.0934494, 0, 0.0934494, 0, 8.88178e-16, -4.44089e-16, 0, 0.0934494, 0.00961844, -0.017918, 8.41474e-09)
mesh = SubResource("ArrayMesh_pp4yo")
skeleton = NodePath("")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00588253, 2.00929, -2.10194e-07)
shape = SubResource("CylinderShape3D_iagi5")

[node name="expolde_particles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00680246, 0)
emitting = false
amount = 16
one_shot = true
explosiveness = 1.0
visibility_aabb = AABB(-1320, -62.8674, -1591.88, 2640, 125.735, 3183.75)
process_material = SubResource("ParticleProcessMaterial_tw2v0")
draw_pass_1 = SubResource("QuadMesh_yosx3")

[node name="trail_particles" type="GPUParticles3D" parent="."]
amount = 20
visibility_aabb = AABB(-1322.95, -84.5299, -1787, 2645.9, 169.06, 3573.99)
trail_lifetime = 0.2
process_material = SubResource("ParticleProcessMaterial_rak02")
draw_pass_1 = SubResource("QuadMesh_xe46a")

[node name="SpotLight3D" type="SpotLight3D" parent="."]
light_color = Color(1, 1, 0, 1)
light_energy = 0.5

[node name="smack" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_yc4vx")
volume_db = -15.0
max_distance = 20.0

[node name="arrow_flight" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_m4v7g")
volume_db = -15.0
max_distance = 10.0
